--- a/_config.yml
+++ b/_config.yml
@@ -107,15 +107,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "SONMOOK OH(Luke)"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "ML Engineer - Signal processing/Machine learning/Acoustic engineering /Optimization problems/Blind Source Separation/Speaker Diarization/Auditory Scene Analysis."
+  location         : "Seoul"
   email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: mailto:sonmookoh@gmail.com
+      url: sonmookoh@gmail.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
